--- a/pages/index.html
+++ b/pages/index.html
@@ -84,7 +84,7 @@
                                 <a href="users.html"><i class="fa fa-user fa-fw"></i>用户管理</a>
                             </li>
                             <li>
-                                <a href="users.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
+                                <a href="statistics.html"><i class="fa fa-bar-chart fa-fw"></i>统计分析</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-gear fa-fw"></i>设置<span class="fa arrow"></span></a>
@@ -101,7 +101,7 @@
             <div id="page-wrapper">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h4 class="page-header">首页</h4>
+                        <h3 class="page-header">首页</h3>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
