--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -109,13 +109,13 @@
 							<div class="panel-heading">时间区间</div>
 							<div class="panel-body">
 								<div class="row">
-									<div class="col-lg-5 col-md-5">
+									<div class="col-lg-3 col-md-3">
 										<input type="date" class="form-control" placeholder="开始日期" id="beginDate" />
 									</div>
-									<div class="col-lg-5 col-md-5">
+									<div class="col-lg-3 col-md-3">
 										<input type="date" class="form-control" placeholder="结束日期" id="endDate" />
 									</div>
-									<div class="col-lg-2 col-md-2">
+									<div class="col-lg-6 col-md-5">
 										<button class="btn btn-primary" id="dataCount">统计</button>
 									</div>
 								</div>
@@ -124,7 +124,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-8 col-md-12">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<i class="fa fa-bar-chart fa-fw"></i>&nbsp;区县别申请数统计
@@ -134,7 +134,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-4 col-md-12">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<i class="fa fa-pie-chart fa-fw"></i>&nbsp;证物类型别申请数统计
@@ -159,6 +159,7 @@
         <!-- Flot Charts JavaScript -->
         <script src="../js/flot/excanvas.min.js"></script>
         <script src="../js/flot/jquery.flot.js"></script>
+		<!--<script src="../js/flot/jquery.flot.categories.js"></script>-->
         <script src="../js/flot/jquery.flot.pie.js"></script>
         <script src="../js/flot/jquery.flot.resize.js"></script>
         <script src="../js/flot/jquery.flot.tooltip.min.js"></script>
