--- a/pages/users.html
+++ b/pages/users.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>智慧监控系统</title>
+        <title>电子物证检验鉴定平台</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -134,37 +134,37 @@
                                         </thead>
 										<tbody>
                                             <tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User001</a></td>
 												<td>用户001</td>
                                             </tr>
                                             <tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User002</a></td>
 												<td>用户002</td>
                                             </tr>
                                             <tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User003</a></td>
 												<td>用户003</td>
                                             </tr>
 											<tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User004</a></td>
 												<td>用户004</td>
                                             </tr>
 											<tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User005</a></td>
 												<td>用户005</td>
                                             </tr>
 											<tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User006</a></td>
 												<td>用户006</td>
                                             </tr>
 											<tr>
-                                                <td><input type="checkbox" /></td>
+                                                <td class="selection-col"><input type="checkbox" /></td>
                                                 <td><a href="#" data-toggle="modal" data-target="#updateUserModal">User007</a></td>
 												<td>用户007</td>
                                             </tr>
@@ -260,13 +260,6 @@
 
         <!-- Metis Menu Plugin JavaScript -->
         <script src="../js/metisMenu.min.js"></script>
-
-		<!-- DataTables JavaScript -->
-        <script src="../js/dataTables/jquery.dataTables.min.js"></script>
-        <script src="../js/dataTables/dataTables.bootstrap.min.js"></script>
-
-		<!-- dashboard charts -->
-		<script src="../scripts/users.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="../js/startmin.js"></script>
