--- a/pages/changePassword.html
+++ b/pages/changePassword.html
@@ -112,21 +112,31 @@
                 </div>
 				<div class="row">
 					<div class="col-lg-12">
-						<form role="form">
+						<form role="form" class="form-horizontal">
 							<div class="form-group">
-								<label for="userID">旧密码</label>
-								<input type="password" class="form-control" id="oldPassword" placeholder="旧密码">
+								<label for="userID" class="col-sm-1 control-label">旧密码</label>
+								<div class="col-sm-5">
+									<input type="password" class="form-control" id="oldPassword" placeholder="旧密码" />
+								</div>
 							</div>
 							<div class="form-group">
-								<label for="userName">新密码</label>
-								<input type="password" class="form-control" id="newPassword" placeholder="新密码">
+								<label for="userName" class="col-sm-1 control-label">新密码</label>
+								<div class="col-sm-5">
+									<input type="password" class="form-control" id="newPassword" placeholder="新密码" />
+								</div>
 							</div>
 							<div class="form-group">
-								<label for="eMail">新密码确认</label>
-                                <input type="password" class="form-control" id="newPasswordConfirm" placeholder="新密码">
+								<label for="eMail" class="col-sm-1 control-label">新密码确认</label>
+								<div class="col-sm-5">
+									<input type="password" class="form-control" id="newPasswordConfirm" placeholder="新密码" />
+								</div>
 							</div>
-							<button type="reset" class="btn btn-default">重置</button>
-							<button type="submit" class="btn btn-primary">保存</button>
+							<div class="form-group">
+								<div class="col-sm-offset-1 col-sm-5">
+									<button type="reset" class="btn btn-default">重置</button>
+									<button type="submit" class="btn btn-primary">保存</button>
+								</div>
+							</div>
 						</form>
 					</div>
 				</div>
