--- a/pages/updateProfile.html
+++ b/pages/updateProfile.html
@@ -112,21 +112,31 @@
                 </div>
 				<div class="row">
 					<div class="col-lg-12">
-						<form role="form">
+						<form role="form" class="form-horizontal">
 							<div class="form-group">
-								<label for="userID">用户ID</label>
-								<input type="text" class="form-control" id="userID" value="User001" readonly>
+								<label for="userID" class="control-label col-sm-1">用户ID</label>
+								<div class="col-sm-11">
+									<input type="text" class="form-control" id="userID" value="User001" readonly />
+								</div>
 							</div>
 							<div class="form-group">
-								<label for="userName">用户名</label>
-								<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="用户001">
+								<label for="userName" class="control-label col-sm-1">用户名</label>
+								<div class="col-sm-11">
+									<input type="text" class="form-control" id="userName" placeholder="请输入用户名" value="用户001" />
+								</div>
 							</div>
 							<div class="form-group">
-								<label for="eMail">e-Mail</label>
-                                <input type="text" class="form-control" id="eMail" placeholder="请输入e-Mail" value="user001@test.org">
+								<label for="eMail" class="control-label col-sm-1">e-Mail</label>
+								<div class="col-sm-11">
+									<input type="email" class="form-control" id="eMail" placeholder="请输入e-Mail" value="user001@test.org" />
+								</div>
 							</div>
-							<button type="reset" class="btn btn-default">重置</button>
-							<button type="submit" class="btn btn-primary">保存</button>
+							<div class="form-group">
+								<div class="col-sm-offset-1 col-sm-11">
+									<button type="reset" class="btn btn-default">重置</button>
+									<button type="submit" class="btn btn-primary">保存</button>
+								</div>
+							</div>
 						</form>
 					</div>
 				</div>
