--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -11,6 +11,7 @@
 
         <!-- Bootstrap Core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
         <!-- MetisMenu CSS -->
         <link href="../css/metisMenu.min.css" rel="stylesheet">
@@ -110,10 +111,10 @@
 							<div class="panel-body">
 								<div class="row">
 									<div class="col-lg-3 col-md-3">
-										<input type="date" class="form-control" placeholder="开始日期" id="beginDate" />
+										<input type="date" class="form-control date-control" placeholder="开始日期" id="beginDate" />
 									</div>
 									<div class="col-lg-3 col-md-3">
-										<input type="date" class="form-control" placeholder="结束日期" id="endDate" />
+										<input type="date" class="form-control date-control" placeholder="结束日期" id="endDate" />
 									</div>
 									<div class="col-lg-6 col-md-5">
 										<button class="btn btn-primary" id="dataCount">统计</button>
@@ -152,6 +153,7 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="../js/bootstrap.min.js"></script>
+		<script src="../js/bootstrap-datetimepicker.min.js"></script>
 
         <!-- Metis Menu Plugin JavaScript -->
         <script src="../js/metisMenu.min.js"></script>
