--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -74,7 +74,7 @@
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li><a href="applyIdentification.html">发起申请</a></li>
-                                    <li><a href="applyIdentification.html">我的申请</a></li>
+                                    <li><a href="myApplications.html">我的申请</a></li>
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
@@ -116,37 +116,37 @@
                                 <div class="portal-block">
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-1</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 11:25</div>
                                         <div class="portal-item-cell">张三</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-2</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 11:11</div>
                                         <div class="portal-item-cell">李四</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-3</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 21:04</div>
                                         <div class="portal-item-cell">王五</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-4</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 22:09</div>
                                         <div class="portal-item-cell">张三</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-4</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 08:11</div>
                                         <div class="portal-item-cell">张三</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-4</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 03:01</div>
                                         <div class="portal-item-cell">张三</div>
                                     </div>
                                     <div class="portal-item-row">
                                         <div class="portal-item-cell">WT-2017-4</div>
-                                        <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                        <div class="portal-item-cell">2017-08-25 17:53</div>
                                         <div class="portal-item-cell">张三</div>
                                     </div>
                                 </div>
@@ -163,31 +163,31 @@
                                     <div class="portal-block">
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-1</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 03:03</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-2</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 05:14</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-3</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 18:20</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-4</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 19:07</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-4</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 20:05</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-4</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 13:22</div>
                                         </div>
                                         <div class="portal-item-row">
                                             <div class="portal-item-cell">WT-2017-4</div>
-                                            <div class="portal-item-cell">2017-08-25 11:24:27</div>
+                                            <div class="portal-item-cell">2017-08-25 15:33</div>
                                         </div>
                                     </div>
                                 </div>
