--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,7 +75,7 @@
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li><a href="applyIdentification.html">发起申请</a></li>
-									<li><a href="applyIdentification.html">我的申请</a></li>
+									<li><a href="myApplications.html">我的申请</a></li>
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
@@ -111,13 +111,38 @@
 							<div class="panel-body">
 								<div class="row">
 									<div class="col-lg-3 col-md-3">
-										<input type="date" class="form-control date-control" placeholder="开始日期" id="beginDate" />
+										<div class="form-group">
+											<label>开始日期</label>
+											<div class="input-group">
+												<input type="date" class="form-control" placeholder="开始日期" id="beginDate" readonly />
+												<span class="input-group-btn">
+													<button class="btn btn-default btn-date" type="button">
+														<span class="fa fa-calendar"></span>
+													</button>
+												</span>
+											</div>
+										</div>
 									</div>
 									<div class="col-lg-3 col-md-3">
-										<input type="date" class="form-control date-control" placeholder="结束日期" id="endDate" />
+										<div class="form-group">
+											<label>结束日期</label>
+											<div class="input-group">
+												<input type="date" class="form-control" placeholder="结束日期" id="endDate" readonly />
+												<span class="input-group-btn">
+													<button class="btn btn-default btn-date" type="button">
+														<span class="fa fa-calendar"></span>
+													</button>
+												</span>
+											</div>
+										</div>
 									</div>
 									<div class="col-lg-6 col-md-5">
-										<button class="btn btn-primary" id="dataCount">统计</button>
+										<div class="form-group">
+											<label>&nbsp;</label>
+											<div>
+												<button class="btn btn-primary" id="dataCount">统计</button>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -154,6 +179,7 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="../js/bootstrap.min.js"></script>
 		<script src="../js/bootstrap-datetimepicker.min.js"></script>
+		<script src="../js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
 
         <!-- Metis Menu Plugin JavaScript -->
         <script src="../js/metisMenu.min.js"></script>
@@ -166,7 +192,6 @@
         <script src="../js/flot/jquery.flot.resize.js"></script>
         <script src="../js/flot/jquery.flot.tooltip.min.js"></script>
         
-        <!-- dashboard charts -->
         <script src="../scripts/statistics.js"></script>
 
         <!-- Custom Theme JavaScript -->
