--- a/pages/users.html
+++ b/pages/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -80,7 +80,7 @@
                                 <a href="#"><i class="fa fa-table fa-fw"></i>证物检验鉴定申请<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li><a href="applyIdentification.html">发起申请</a></li>
-                                    <li><a href="applyIdentification.html">我的申请</a></li>
+                                    <li><a href="myApplications.html">我的申请</a></li>
                                     <li><a href="showApplicationHistory.html">申请历史</a></li>
                                     <li><a href="showPendingApplication.html">待处理申请</a></li>
                                     <li><a href="showProcessedAppliation.html">已处理申请</a></li>
@@ -186,7 +186,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-							&times;
+							<span class="fa fa-times"></span>
 						</button>
 						<h4 class="modal-title" id="myModalLabel">
 							添加用户
@@ -222,7 +222,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-							&times;
+							<span class="fa fa-times"></span>
 						</button>
 						<h4 class="modal-title" id="myModalLabel">
 							更新用户
