--- a/pages/applyIdentification.html
+++ b/pages/applyIdentification.html
@@ -76,9 +76,9 @@
                                 <ul class="nav nav-second-level">
                                     <li><a href="applyIdentification.html" class="active">发起申请</a></li>
                                     <li><a href="myApplications.html">我的申请</a></li>
-                                    <li><a href="showApplicationsHistory.html">申请历史</a></li>
-                                    <li><a href="showPendingApplications.html">待处理申请</a></li>
-                                    <li><a href="showProcessedAppliations.html">已处理申请</a></li>
+                                    <li><a href="showApplicationHistory.html">申请历史</a></li>
+                                    <li><a href="showPendingApplication.html">待处理申请</a></li>
+                                    <li><a href="showProcessedAppliation.html">已处理申请</a></li>
                                 </ul>
                             </li>
                             <li>
