--- a/pages/showPendingApplication.html
+++ b/pages/showPendingApplication.html
@@ -467,27 +467,93 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
-                                                    <tr>
-                                                        <td>1</td>
-                                                        <td>受理/立案决定<br/>法律文书</td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>2</td>
-                                                        <td>检材来源<br />法律文书</td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>3</td>
-                                                        <td>其他（参考材料）</td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                    </tr>
+                                                	<tr>
+                                                		<td>1</td>
+                                                		<td>受理/立案决定<br/>法律文书</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>受理/立案决定法律文书-1</option>
+                                                				<option>受理/立案决定法律文书-2</option>
+                                                				<option>受理/立案决定法律文书-3</option>
+                                                				<option>受理/立案决定法律文书-4</option>
+                                                				<option>受理/立案决定法律文书-5</option>
+                                                				<option>受理/立案决定法律文书-6</option>
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>3页</option>
+                                                				<option>5件</option>
+                                                				<option>2套</option>
+                                                				<option>9页</option>
+                                                				<option>5件</option>
+                                                				<option>2套</option>
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>备注文本备注文本备注文本-1</option>
+                                                				<option>无</option>
+                                                				<option>&nbsp;</option>
+                                                				<option>&nbsp;</option>
+                                                				<option>无</option>
+                                                				<option>&nbsp;</option>
+                                                			</select>
+                                                		</td>
+                                                	</tr>
+                                                	<tr>
+                                                		<td>2</td>
+                                                		<td>检材来源<br />法律文书</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>检材来源法律文书-1</option>
+                                                				<option>检材来源法律文书-2</option>
+                                                				<option>检材来源法律文书-3</option>
+                                                				<option>检材来源法律文书-4</option>
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>3页</option>
+                                                				<option>5件</option>
+                                                				<option>2套</option>
+                                                				<option>9页</option>
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>备注文本备注文本备注文本-1</option>
+                                                				<option>无</option>
+                                                				<option>无</option>
+                                                				<option>&nbsp;</option>
+                                                			</select>
+                                                		</td>
+                                                	</tr>
+                                                	<tr>
+                                                		<td>3</td>
+                                                		<td>其他（参考材料）</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>其他（参考材料）-1</option>
+                                                				<option>其他（参考材料）-2</option>
+                                                				<option>其他（参考材料）-3</option>
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>3页</option>
+                                                				<option>5件</option>
+                                                				<option>2套</option
+                                                			</select>
+                                                		</td>
+                                                		<td>
+                                                			<select class="form-control fileSelect" size="4" multiple disabled>
+                                                				<option>备注文本备注文本备注文本-1</option>
+                                                				<option>无</option>
+                                                				<option>&nbsp;</option>
+                                                			</select>
+                                                		</td>
+                                                	</tr>
                                                 </tbody>
                                             </table>
                                         </div>
